adding persistent tuples